@@ -11,6 +11,8 @@ release 0.7 (2008-04-18)
     UriBuilder.build(Map<String, String> values) changed to 
     UriBuilder.build(Map<String, Object> values).
     The Object instances must support the toString method.
+  - Support message body writer for javax.ws.rs.core.StreamingOutput.
+  - Support message body reader/writer for java.io.Reader.
 
 release 0.6.1 (2008-03-18)
 - Support for xml attributes serialization/deserialization in JSON added
